Implemented AutosizeVerticalFlowLayout. Auto resize cell depend on size of collection view (works when user re-size split view)

--- a/Titan_macOS/Titan_macOS/Base.lproj/Main.storyboard
+++ b/Titan_macOS/Titan_macOS/Base.lproj/Main.storyboard
@@ -720,6 +720,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="335" height="594"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zuD-zA-bIm">
+                                <rect key="frame" x="0.0" y="1" width="37" height="17"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="hMt-kE-gKJ">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                             <scrollView wantsLayer="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pRJ-wd-fzv">
                                 <rect key="frame" x="0.0" y="0.0" width="335" height="594"/>
                                 <clipView key="contentView" drawsBackground="NO" id="YNR-Bg-9Pk">
