--- a/Titan_macOS/Titan_macOS/ConnectionGroupCell.xib
+++ b/Titan_macOS/Titan_macOS/ConnectionGroupCell.xib
@@ -23,6 +23,10 @@
                 </textField>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="guc-0K-bXz">
                     <rect key="frame" x="143" y="0.0" width="14" height="32"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="32" id="1iq-sP-f5e"/>
+                        <constraint firstAttribute="width" constant="14" id="34y-cx-CTZ"/>
+                    </constraints>
                     <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="icon_add_database" imagePosition="only" alignment="center" alternateImage="icon_add_database_selected" imageScaling="proportionallyDown" inset="2" id="al9-rr-2Ne">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -33,10 +37,10 @@
                 </button>
             </subviews>
             <constraints>
+                <constraint firstItem="guc-0K-bXz" firstAttribute="centerY" secondItem="Sqh-bk-X1s" secondAttribute="centerY" id="1Fg-C1-HK3"/>
                 <constraint firstItem="W8e-Rm-4JV" firstAttribute="leading" secondItem="Sqh-bk-X1s" secondAttribute="leading" constant="19" id="4I3-le-xIJ"/>
                 <constraint firstItem="W8e-Rm-4JV" firstAttribute="centerY" secondItem="Sqh-bk-X1s" secondAttribute="centerY" id="Elc-YH-rfW"/>
-                <constraint firstItem="guc-0K-bXz" firstAttribute="centerY" secondItem="W8e-Rm-4JV" secondAttribute="centerY" id="Tq6-ft-6b9"/>
-                <constraint firstItem="guc-0K-bXz" firstAttribute="leading" secondItem="W8e-Rm-4JV" secondAttribute="trailing" constant="8" id="pY9-lE-ILH"/>
+                <constraint firstItem="guc-0K-bXz" firstAttribute="leading" secondItem="W8e-Rm-4JV" secondAttribute="trailing" constant="8" id="hJ8-vb-D3b"/>
             </constraints>
             <connections>
                 <outlet property="addDatabaseBtn" destination="guc-0K-bXz" id="7xO-Kx-z1T"/>
